Got the "default_build" working. This is the build that people will see when they download the open-source code and do not have the proprietary folders available.

--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -118,9 +118,13 @@
 
     <div id="id-dialog_box_for_user_feedback" style="display:none;"></div>
 
-    {% if not use_compressed_static_files %}
-    <!-- only enable livereload for development build -->
-    <script src="//localhost:35729/livereload.js"></script>
+
+    {% if build_name != "default_build" %}
+    <!-- only enable livereload if you know what it does and how to use it -->
+        {% if not use_compressed_static_files %}
+        <!-- only enable livereload for development build -->
+        <script src="//localhost:35729/livereload.js"></script>
+        {% endif %}
     {% endif %}
 
 </body>
