Updated build scripts to handle "proprietary" css files that are located in the common styles directory. This is necessary for the default_build to display properly, since it doesn't contain its own truly proprietary styles.

--- a/client/app/html/import_main_css_and_js.html
+++ b/client/app/html/import_main_css_and_js.html
@@ -36,9 +36,9 @@
     <link rel="stylesheet" href="/styles/site_common.css">
     <link rel="stylesheet" href="/styles/user_main.css">
     <link rel="stylesheet" href="/styles/menubar_common.css">
-    <link rel="stylesheet" href="/proprietary/styles/{{ build_name_used_for_menubar }}_menubar.css">
-    <link rel="stylesheet" href="/proprietary/styles/{{ build_name }}_common.css">
-    <link rel="stylesheet" href="/proprietary/styles/proprietary_common.css">
+    <link rel="stylesheet" href="{{ proprietary_styles_dir }}/{{ build_name_used_for_menubar }}_menubar.css">
+    <link rel="stylesheet" href="{{ proprietary_styles_dir }}/{{ build_name }}_common.css">
+    <link rel="stylesheet" href="{{ proprietary_styles_dir }}/proprietary_common.css">
     <!-- endbuild -->
 
     <!-- Start JavaScript Imports here -->
