Updated path to github repository

--- a/client/app/html/common_wrapper.html
+++ b/client/app/html/common_wrapper.html
@@ -8,7 +8,7 @@
 #
 # Original author: Alexander Marquardt
 # Documentation and additional information: http://www.LexaLink.com
-# Git source code repository: https://github.com/lexalink/LexaLink.git
+# Git source code repository: https://github.com/alexander-marquardt/lexalink
 #
 # Please consider contributing your enhancements and modifications to the LexaLink community,
 #
