--- a/client/app/html/user_main_helpers/purchase_buttons.html
+++ b/client/app/html/user_main_helpers/purchase_buttons.html
@@ -18,13 +18,18 @@
         </strong>
       <p>
         {% include "user_main_helpers/paypal_purchase_form.html" %}
-      <p>
 
+      <p>
+        {% blocktrans %}
+        This is a one-time VIP membership payment that does not automatically renew.
+        {% endblocktrans %}
+
+      <p>
         {% blocktrans %}
         Credit card payments are processed by PayPal, an eBay company, and one of the worlds largest online payment processors).
         {% endblocktrans%}
 
-       <p>
+      <p>
         {% if build_name == "discrete_build" or build_name == "gay_build" or build_name == "lesbian_build" or build_name == "swinger_build" %}
             {% blocktrans with app_name as app_name %}To protect your privacy, if you choose to pay with credit card you will be billed
             with a discrete name that cannot be easily linked to {{ app_name }}.
