Fixed information about payment processing.

--- a/client/app/html/user_main_helpers/purchase_buttons.html
+++ b/client/app/html/user_main_helpers/purchase_buttons.html
@@ -26,7 +26,7 @@
 
       <p>
         {% blocktrans %}
-        Credit card payments are processed by PayPal, an eBay company, and one of the worlds largest online payment processors).
+        Credit card payments are processed by PayPal, an eBay company, and one of the worlds largest online payment processors.
         {% endblocktrans%}
 
       <p>
