--- a/client/app/html/user_main_helpers/vip_benefits.html
+++ b/client/app/html/user_main_helpers/vip_benefits.html
@@ -4,7 +4,7 @@
         
         <ul>
         <li class="cl-indent">{% blocktrans with guest_num_new_people_messages_allowed_in_window as guest_new_people and guest_window_days as guest_days and vip_num_new_people_messages_allowed_in_window as vip_messages and vip_window_hours as vip_hours%}
-                vip_message_quota {{ vip_messages }} {{ vip_hours }} {{ guest_new_people }} {{ guest_days }} {% endblocktrans %}</li>
+                vip_message_quota {{ vip_messages }} {% endblocktrans %}</li> <!-- removed vip_hours guest_days and guest_new_people -->
         <li class="cl-indent">{% blocktrans with app_name as app_name %}Online status benefits {{ app_name }}{% endblocktrans %}</li>
         <li class="cl-indent">{% blocktrans with NUMER_OF_DAYS_PROFILE_VIEWS_STORED as days and  app_name as app_name %}
             You will see all of the other {{ app_name }} members that have viewed your profile over the past {{ days }} days. 
@@ -12,7 +12,7 @@
         <li class="cl-indent">{% blocktrans with num_chat_friends_for_free_clients as free and  num_chat_friends_for_vip_clients as vip %}
                 vip_chat_friends {{ vip }} {{ free }}{% endblocktrans %}</li>
         <li class="cl-indent">{% blocktrans with CHAT_FRIEND_NUM_MESSAGES_TO_OTHER_USER_IN_TIME_WINDOW as cf_num_messages and STANDARD_NUM_MESSAGES_TO_OTHER_USER_IN_TIME_WINDOW as std_num_messages %}
-                vip_repeat_message_quota {{ cf_num_messages }} {{ std_num_messages }}{% endblocktrans %}</li>
+                vip_repeat_message_quota {{ cf_num_messages }}{% endblocktrans %}</li> <!-- removed {{ std_num_messages }} -->
         <li class="cl-indent">{% blocktrans %}You can update your email address{% endblocktrans %}</li>
 
         </ul>
