Minor name change - "dropdown" is now "radio" which reflects reality better.

--- a/client/app/html/user_main_helpers/paysafecard_purchase_form.html
+++ b/client/app/html/user_main_helpers/paysafecard_purchase_form.html
@@ -14,7 +14,7 @@
     <input type="hidden" name="charset" value="utf-8">
     <input type="hidden" name="currency_code" value="{{ paysafecard_data.currency_code }}">
     <input type="hidden" name="owner_nid" value="{{ paysafecard_data.owner_nid }}">
-    {{ paysafecard_data.dropdown_options|safe }}
+    {{ paysafecard_data.radio_options|safe }}
     <p>
     <input class="cl-payment_button" type="submit" name="submit" value="{% trans 'Purchase' %}">
 
