--- a/client/app/html/user_main_helpers/paypal_purchase_form.html
+++ b/client/app/html/user_main_helpers/paypal_purchase_form.html
@@ -26,14 +26,14 @@
         <input type="hidden" name="currency_code" value="{{ paypal_data.currency_code }}">
             <p>
             <input type="hidden" name="on0" value="VIP">
-            {{ paypal_data.dropdown_options|safe }}
+            {{ paypal_data.radio_options|safe }}
             <p>
             <!-- Note: since we currently have multiple paypal buttons defined on a single page (in pop-up menu, and at bottom of page)
             we need to define each region as a class as opposed to assigning an id, since an id would not be unique -->
             <input class="cl-payment_button" type="submit" name="submit" value="{% trans 'Purchase' %}">
             <p>
 
-        {{ paypal_data.dropdown_options_hidden_fields|safe }}
+        {{ paypal_data.options_hidden_fields|safe }}
 
     </form>
 
