--- a/client/app/html/user_main_helpers/paysafecard_purchase_form.html
+++ b/client/app/html/user_main_helpers/paysafecard_purchase_form.html
@@ -20,6 +20,7 @@
 
 </form>
 
+<div id="id-paysafecard-purchase-dialog" style="display:none;"></div>
 
 <script type="text/javascript">
 
@@ -34,6 +35,9 @@ $("#id-create-paysafecard-disposition").submit(function(e) {
         url: paysafe_card_disposition_url,
         data: $(this).serialize(), // this should point to the form and serialize its data
         dataType: "json", // response type
+
+        // We have created to card disposition on both our servers and on paysafecard servers, now we
+        // make a request to paysafecard to show the customer panel.
         success: function (post_response) {
             var page = "{{ paysafecard_data.paysafecard_customer_panel_url }}?" +
                             "mid=" + post_response.merchant_id +
@@ -41,8 +45,9 @@ $("#id-create-paysafecard-disposition").submit(function(e) {
                             "&mtid=" + post_response.merchant_transaction_id +
                             "&amount=" + post_response.amount;
 
-            var $dialog = $('<div></div>')
-               .html('<iframe style="border: 0px; " src="' + page + '" width="100%" height="100%"></iframe>')
+
+            var $dialog =  $("#id-paysafecard-purchase-dialog");
+            $dialog.html('<iframe id="id-paysafe-iframe" style="border: 0px; " src="' + page + '" width="100%" height="100%"></iframe>')
                .dialog({
                    autoOpen: false,
                    modal: true,
@@ -52,12 +57,16 @@ $("#id-create-paysafecard-disposition").submit(function(e) {
                });
             $dialog.dialog('open');
 
+            // Only once the customer panel is loaded, hide the spinner
+            $('#id-paysafe-iframe').load(function () {
+                $('#id-show-loading-spinner').hide();
+            })
+
         },
         error: function (jqXHR, textStatus, errorThrown) {
             reportAjaxError(textStatus, errorThrown, "paysafecard-disposition", 'critical');
         },
         complete: function () {
-            $('#id-show-loading-spinner').hide();
         }
     });
     e.preventDefault();
