Added missing semicolon

--- a/client/app/html/user_main_helpers/test_vip_benefits_dialog.html
+++ b/client/app/html/user_main_helpers/test_vip_benefits_dialog.html
@@ -103,7 +103,7 @@ function showOnlineStatusMainDialog() {
 
 function showAllVipBenefitsDialog() {
 
-    $("#id-show_vip_benefits_dialog_box").html($("#id-become_a_vip").html())
+    $("#id-show_vip_benefits_dialog_box").html($("#id-become_a_vip").html());
     $("#id-show_vip_benefits_dialog_box").dialog({
         width: '750px'
     });
