--- a/client/app/html/user_main_helpers/vip_main_inside_iframe_html.html
+++ b/client/app/html/user_main_helpers/vip_main_inside_iframe_html.html
@@ -3,9 +3,15 @@
     <head>
 
         {% include "import_main_css_and_js.html" %}
+        <style>
+            body {
+                background-image: none;
+                background-color: white;
+            }
+        </style>
 
     </head>
     <body>
-        <!-- body will be dynamically over-written -->
+        {% include "user_main_helpers/vip_main.html" %}
     </body>
 </html>
