--- a/client/app/html/user_main_helpers/menubar.html
+++ b/client/app/html/user_main_helpers/menubar.html
@@ -91,7 +91,7 @@
 
             {% if SHOW_VIP_UPGRADE_OPTION %}
                 {% if general_information_data_fields.this_is_a_logout and guest_user_data_fields.registered_user_bool %}
-                    showAllVipBenefitsDialog();
+                    showAllVipBenefitsDialog({{ primary_user_presentation_data_fields.owner_nid }});
                 {% endif %}
             {% endif %}
 
